# document-automate

./: docctl.py  pyproject.toml
